// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly when creating a group 1`] = `
<Form
  onSubmit={[Function]}
>
  <Divider
    type="basic"
  />
  <FormRow>
    <Field
      component={[Function]}
      label="Talent Type"
      name="talentType"
      onChange={[Function]}
      options={
        Array [
          Object {
            "label": "Individual",
            "value": "Individual",
          },
          Object {
            "label": "Group",
            "value": "Group",
          },
        ]
      }
      required={true}
      searchable={false}
    />
  </FormRow>
  <FormRow>
    <Field
      component={[Function]}
      disabled={true}
      forceSingleLine={true}
      label="First Names"
      maxLength={200}
      name="firstNames"
    />
    <Field
      component={[Function]}
      forceSingleLine={true}
      label="Last Name / Group Name"
      maxLength={200}
      name="lastName"
      required={true}
    />
  </FormRow>
  <FormRow>
    <Field
      component={[Function]}
      forceSingleLine={true}
      label="Common Role"
      maxLength={200}
      name="commonRole"
      required={true}
    />
  </FormRow>
  <FormRow>
    <Field
      component={[Function]}
      label="Description"
      maxLength={5000}
      name="description"
    />
  </FormRow>
  <FormRow>
    <Field
      component={[Function]}
      label="We Say"
      maxLength={300}
      name="weSay"
    />
  </FormRow>
  <FormRow>
    <Field
      component={[Function]}
      label="Links"
      name="links"
      onAddLink={[Function]}
      onDeleteLink={[Function]}
    />
  </FormRow>
  <FormRow>
    <Field
      component={[Function]}
      entityType="talent"
      label="Images"
      name="images"
      onAddImage={[Function]}
      onDeleteImage={[Function]}
      onSetMainImage={[Function]}
      onUpdateImage={[Function]}
      showModal={[Function]}
    />
  </FormRow>
  <Divider
    type="basic"
  />
  <FormButtons
    onCancel={null}
    submitLabel="Submit"
    submitting={false}
  />
</Form>
`;

exports[`should render correctly when editing an individual 1`] = `
<Form
  onSubmit={[Function]}
>
  <Divider
    type="basic"
  />
  <FormRow>
    <Field
      component={[Function]}
      label="Talent Type"
      name="talentType"
      onChange={[Function]}
      options={
        Array [
          Object {
            "label": "Individual",
            "value": "Individual",
          },
          Object {
            "label": "Group",
            "value": "Group",
          },
        ]
      }
      required={true}
      searchable={false}
    />
    <Field
      component={[Function]}
      label="Status"
      name="status"
      searchable={false}
    />
  </FormRow>
  <FormRow>
    <Field
      component={[Function]}
      disabled={false}
      forceSingleLine={true}
      label="First Names"
      maxLength={200}
      name="firstNames"
    />
    <Field
      component={[Function]}
      forceSingleLine={true}
      label="Last Name / Group Name"
      maxLength={200}
      name="lastName"
      required={true}
    />
  </FormRow>
  <FormRow>
    <Field
      component={[Function]}
      forceSingleLine={true}
      label="Common Role"
      maxLength={200}
      name="commonRole"
      required={true}
    />
  </FormRow>
  <FormRow>
    <Field
      component={[Function]}
      label="Description"
      maxLength={5000}
      name="description"
    />
  </FormRow>
  <FormRow>
    <Field
      component={[Function]}
      label="We Say"
      maxLength={300}
      name="weSay"
    />
  </FormRow>
  <FormRow>
    <Field
      component={[Function]}
      label="Links"
      name="links"
      onAddLink={[Function]}
      onDeleteLink={[Function]}
    />
  </FormRow>
  <FormRow>
    <Field
      component={[Function]}
      entityType="talent"
      label="Images"
      name="images"
      onAddImage={[Function]}
      onDeleteImage={[Function]}
      onSetMainImage={[Function]}
      onUpdateImage={[Function]}
      showModal={[Function]}
    />
  </FormRow>
  <Divider
    type="basic"
  />
  <FormButtons
    onCancel={[Function]}
    submitLabel="Submit"
    submitting={false}
  />
</Form>
`;
